# ebook-scaling-data-teams

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  script.sh
.github/: quality-check.yml
.github/workflows/: quality-check.yml
config/prometheus/: prometheus.yml
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: customers.sql  sources.yml
dbt_project/models/stg/: stg_customers.sql  stg_orders.sql  stg_payments.sql
localstack/: init-localstack.sh
postgres/: postgres_bootstrap.sql
src/ebook/components/: export.py
src/ebook/defs/: resources.py  schedules.py  sensors.py
src/ebook/defs/assets/: analysis.py  flaky.py  prometheus_assets.py  retries.py  transform.py
src/ebook/defs/dbt/: defs.yaml
src/ebook/defs/dlt/: defs.yaml  loads.py
src/ebook/defs/evidence/: defs.yaml
src/ebook/defs/export/: defs.yaml
src/ebook/defs/sling/: defs.yaml  replication.yaml
tests/: conftest.py  fixtures.py  pytest.ini  test_10_person_team.py  test_1_person_team.py  test_20_person_team.py  test_5_person_team.py  test_project.py  test_sling_assets.py
tests/postgres/: postgres_bootstrap.sql
