[project]
name = "ebook"
requires-python = ">=3.9,<=3.13.3"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-webserver",
    "dagster-dg-cli",
    "dagster-aws",
    "dagster-dbt",
    "dagster-duckdb",
    "dagster-dlt",
    "dagster-sling",
    "dagster-evidence",
    "dagster-prometheus",
    "dbt-duckdb",
    "dlt[s3, parquet]",
    "pandas",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ebook"
registry_modules = [
    "ebook.components.*",
]